# dataforge

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
agent/: prompts.py  tasks.py  utils.py
llm/: __init__.py  datacls.py  llm.py
src/: __init__.py  agent.py  llm_providers.py  memory.py  messages.py  multi_agent.py  prompts.py  tasks.py  test.ipynb  test.py  utils.py
src/data_forge/: __init__.py  agent.py  llm_providers.py  multi_agent.py  utils.py
src/syn_agent/: agent.py  api_providers.py  llm_providers.py  multi_agent.py  test.ipynb  test.py  utils.py
syn_agent/: multi_agent.py  tasks.py
tests/: __init__.py  test_agent.py  test_llm_providers.py  test_multi_agent.py  test_synthetic_data_generator.py
