[project]
name = "raggen"
version = "0.1.0"
description = "A python library designed for synthetic data generation, with a focus on data localization and multi-agentic collaboration!"
authors = [{ name = "Pham Kinh Quoc", email = "phamkinhquoc2002@gmail.com" }]
dependencies = [
    python-dotenv==1.0.1
    typing-extensions==4.12.2
    pydantic==2.10.6
    openai==1.63.2
    google-genai==1.2.0
    ipykernel==6.29.5
    langchain==0.3.19
    langchain-community==0.3.19
    langgraph==0.2.74
    pytest==8.3.4
    pypdf==5.3.0
    faiss-cpu==1.10.0
    rank-bm25==0.2.2
    rich==13.9.4
    langchain-docling
    ]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"